# Enjoy-Azure-Kinect

./: .clang-format  .gitignore  .gitmodules  Enjoy_Azure_Kinect.code-workspace  README.md  pyproject.toml  setup.cfg  setup.py
enjoy_azure_kinect/: .gitignore  package.xml  setup.py
enjoy_azure_kinect/launch/: image.launch.py  start.launch.py
enjoy_azure_kinect/scripts/: compress_image.py  test_speech_recognition.py  tools.py
image_processor/: CMakeLists.txt  package.xml
image_processor/image_processor/: import_module.py
image_processor/include/image_processor/: image_compressor.hpp  target_extractor.hpp
image_processor/main/: compress_image_node.cpp  extract_target_node.cpp
image_processor/src/: compress_image_node.cpp
microphone_processor/: CMakeLists.txt  package.xml
microphone_processor/microphone_processor/: hark_network.py  tools.py
microphone_processor/scripts/: online_sound_localization.py  record_audio.py  show_audio_devices.py  sound.launch.sh  test_hark.py  test_microphone_array.py
scripts/: hark_network.py  online_sound_localization.py  record_audio.py  test_hark.py  test_microphone_array.py
