[tool.poetry]
name = "enjoy-azure-kinect"
version = "0.1.0"
description = ""
authors = ["Kenji Fukuda <fk.kenji.21@gmail.com>"]
readme = "README.md"
# packages = [{include = "enjoy_azure_kinect"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.4"
sounddevice = "^0.4.6"
scipy = "^1.10.1"
ipython = "^8.9.0"
opencv-python = "^4.10.0.84"
opencv-contrib-python = "^4.10.0.84"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
